# ffmabench

./: .gitignore  CMakeLists.txt  README.md  ffmabench.cu  ffmabenchmetal.m  metalgpucode.metal
